[package]
name = "rustengine"
version = "0.1.0"
authors = ["danielvisser <danielvisser10@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "*"
winit = "*"
memoffset = "*"
cgmath = "*"
rand = "*"

[target.'cfg(windows)'.dependencies]
winapi = {version = "*", features = ["windef", "winuser"]}

[target.'cfg(target_os = "macos")'.dependencies]
metal = "*"
cocoa = "*"
objc = "*"